Update env files for shellcheck SC2086
- SC2086 – Double quote to prevent globbing and word splitting.
- Add double quotes around variables where missing in env files.

Refs #397

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -37,7 +37,7 @@ export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
 
-if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
+if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -46,14 +46,14 @@ if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
     export sys_tp="HERA"
     export launcher_PREP="srun"
 
-elif [ ${step} = "waveinit" -o ${step} = "waveprep" -o ${step} = "wavepostsbs" -o ${step} = "wavepostbndpnt" -o ${step} = "wavepostbndpntbll" -o ${step} = "wavepostpnt" ]; then
+elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostbndpntbll" -o "${step}" = "wavepostpnt" ]; then
 
     export CFP_MP="YES"
-    if [ ${step} = "waveprep" ]; then export MP_PULSE=0 ; fi
+    if [ "${step}" = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd_opt}
 
-elif [ ${step} = "atmanalrun" ]; then
+elif [ "${step}" = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -65,7 +65,7 @@ elif [ ${step} = "atmanalrun" ]; then
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
     export APRUN_ATMANAL="${launcher} -n ${npe_atmanalrun}"
 
-elif [ ${step} = "atmensanalrun" ]; then
+elif [ "${step}" = "atmensanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -77,7 +77,7 @@ elif [ ${step} = "atmensanalrun" ]; then
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="${launcher} -n ${npe_atmensanalrun}"
 
-elif [ ${step} = "aeroanlrun" ]; then
+elif [ "${step}" = "aeroanlrun" ]; then
 
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
@@ -87,7 +87,7 @@ elif [ ${step} = "aeroanlrun" ]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ ${step} = "anal" -o ${step} = "analcalc" ]; then
+elif [ "${step}" = "anal" -o "${step}" = "analcalc" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -116,7 +116,7 @@ elif [ ${step} = "anal" -o ${step} = "analcalc" ]; then
     npe_gausfcanl=${npe_gausfcanl:-1}
     export APRUN_GAUSFCANL="${launcher} -n ${npe_gausfcanl}"
 
-elif [ ${step} = "sfcanl" ]; then
+elif [ "${step}" = "sfcanl" ]; then
     nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
@@ -124,7 +124,7 @@ elif [ ${step} = "sfcanl" ]; then
     npe_sfcanl=${ntiles:-6}
     export APRUN_CYCLE="${launcher} -n ${npe_sfcanl}"
 
-elif [ ${step} = "gldas" ]; then
+elif [ "${step}" = "gldas" ]; then
 
     export USE_CFP="NO"
     export CFP_MP="YES"
@@ -145,7 +145,7 @@ elif [ ${step} = "gldas" ]; then
     npe_gldas_data_proc=$((${gldas_spinup_hours} + 12))
     export APRUN_GLDAS_DATA_PROC="${launcher} -n ${npe_gldas_data_proc} ${mpmd_opt}"
 
-elif [ ${step} = "eobs" ]; then
+elif [ "${step}" = "eobs" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -160,7 +160,7 @@ elif [ ${step} = "eobs" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-elif [ ${step} = "eupd" ]; then
+elif [ "${step}" = "eupd" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_eupd}))
 
@@ -172,7 +172,7 @@ elif [ ${step} = "eupd" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-elif [ ${step} = "fcst" ]; then
+elif [ "${step}" = "fcst" ]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
     if [[ ${CDUMP} == "gfs" ]]; then
@@ -197,7 +197,7 @@ elif [ ${step} = "fcst" ]; then
     export APRUN_REMAP="${launcher} -n ${npe_remap:-${npe_fcst}}"
     export I_MPI_DAPL_UD="enable"
 
-elif [ ${step} = "efcs" ]; then
+elif [ "${step}" = "efcs" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_efcs}))
 
@@ -210,7 +210,7 @@ elif [ ${step} = "efcs" ]; then
     [[ ${NTHREADS_REGRID_NEMSIO} -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="${launcher} -n ${LEVS}"
 
-elif [ ${step} = "post" ]; then
+elif [ "${step}" = "post" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_post}))
 
@@ -222,7 +222,7 @@ elif [ ${step} = "post" ]; then
     [[ ${NTHREADS_DWN} -gt ${nth_max} ]] && export NTHREADS_DWN=${nth_max}
     export APRUN_DWN="${launcher} -n ${npe_dwn}"
 
-elif [ ${step} = "ecen" ]; then
+elif [ "${step}" = "ecen" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_ecen}))
 
@@ -238,7 +238,7 @@ elif [ ${step} = "ecen" ]; then
     [[ ${NTHREADS_CALCINC} -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="${launcher} -n ${npe_ecen}"
 
-elif [ ${step} = "esfc" ]; then
+elif [ "${step}" = "esfc" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_esfc}))
 
@@ -250,7 +250,7 @@ elif [ ${step} = "esfc" ]; then
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     export APRUN_CYCLE="${launcher} -n ${npe_esfc}"
 
-elif [ ${step} = "epos" ]; then
+elif [ "${step}" = "epos" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_epos}))
 
@@ -258,11 +258,11 @@ elif [ ${step} = "epos" ]; then
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="${launcher} -n ${npe_epos}"
 
-elif [ ${step} = "init" ]; then
+elif [ "${step}" = "init" ]; then
 
     export APRUN="${launcher} -n ${npe_init}"
 
-elif [ ${step} = "postsnd" ]; then
+elif [ "${step}" = "postsnd" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_postsnd}))
 
@@ -274,7 +274,7 @@ elif [ ${step} = "postsnd" ]; then
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
     export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsnd} ${mpmd_opt}"
 
-elif [ ${step} = "awips" ]; then
+elif [ "${step}" = "awips" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_awips}))
 
@@ -282,7 +282,7 @@ elif [ ${step} = "awips" ]; then
     [[ ${NTHREADS_AWIPS} -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
     export APRUN_AWIPSCFP="${launcher} -n ${npe_awips} ${mpmd_opt}"
 
-elif [ ${step} = "gempak" ]; then
+elif [ "${step}" = "gempak" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_gempak}))
 
