--- a/env/JET.env
+++ b/env/JET.env
@@ -32,7 +32,7 @@ ulimit -a
 export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
-if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
+if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -40,13 +40,13 @@ if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
     export BACK=${BACK:-"NO"}
     export sys_tp="JET"
 
-elif [ ${step} = "waveinit" -o ${step} = "waveprep" -o ${step} = "wavepostsbs" -o ${step} = "wavepostbndpnt" -o ${step} = "wavepostbndpntbll" -o ${step} = "wavepostpnt" ]; then
+elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostbndpntbll" -o "${step}" = "wavepostpnt" ]; then
 
-    if [ ${step} = "waveprep" ]; then export MP_PULSE=0 ; fi
+    if [ "${step}" = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd_opt}
 
-elif [ ${step} = "atmanalrun" ]; then
+elif [ "${step}" = "atmanalrun" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_atmanalrun}))
 
@@ -54,7 +54,7 @@ elif [ ${step} = "atmanalrun" ]; then
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
     export APRUN_ATMANAL="${launcher} ${npe_atmanalrun}"
 
-elif [ ${step} = "atmensanalrun" ]; then
+elif [ "${step}" = "atmensanalrun" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_atmensanalrun}))
 
@@ -62,7 +62,7 @@ elif [ ${step} = "atmensanalrun" ]; then
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="${launcher} ${npe_atmensanalrun}"
 
-elif [ ${step} = "anal" ]; then
+elif [ "${step}" = "anal" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_anal}))
 
@@ -83,7 +83,7 @@ elif [ ${step} = "anal" ]; then
     npe_gausfcanl=${npe_gausfcanl:-1}
     export APRUN_GAUSFCANL="${launcher} ${npe_gausfcanl}"
 
-elif [ ${step} = "sfcanl" ]; then
+elif [ "${step}" = "sfcanl" ]; then
     nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
@@ -91,7 +91,7 @@ elif [ ${step} = "sfcanl" ]; then
     npe_sfcanl=${ntiles:-6}
     export APRUN_CYCLE="${launcher} ${npe_sfcanl}"
 
-elif [ ${step} = "gldas" ]; then
+elif [ "${step}" = "gldas" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_gldas}))
 
@@ -103,7 +103,7 @@ elif [ ${step} = "gldas" ]; then
     [[ ${NTHREADS_GAUSSIAN} -gt ${nth_max} ]] && export NTHREADS_GAUSSIAN=${nth_max}
     export APRUN_GAUSSIAN="${launcher} ${npe_gaussian}"
 
-elif [ ${step} = "eobs" ]; then
+elif [ "${step}" = "eobs" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_eobs}))
 
@@ -111,7 +111,7 @@ elif [ ${step} = "eobs" ]; then
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
     export APRUN_GSI="${launcher} ${npe_gsi:-${npe_eobs:-${PBS_NP}}}"
 
-elif [ ${step} = "eupd" ]; then
+elif [ "${step}" = "eupd" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_eupd}))
 
@@ -119,7 +119,7 @@ elif [ ${step} = "eupd" ]; then
     [[ ${NTHREADS_ENKF} -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
     export APRUN_ENKF="${launcher} ${npe_enkf:-${npe_eupd:-${PBS_NP}}}"
 
-elif [ ${step} = "fcst" ]; then
+elif [ "${step}" = "fcst" ]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
     if [[ ${CDUMP} == "gfs" ]]; then
@@ -144,7 +144,7 @@ elif [ ${step} = "fcst" ]; then
     export APRUN_REMAP="${launcher} ${npe_remap:-${npe_fcst:-${PBS_NP}}}"
     export I_MPI_DAPL_UD="enable"
 
-elif [ ${step} = "efcs" ]; then
+elif [ "${step}" = "efcs" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_efcs}))
 
@@ -157,7 +157,7 @@ elif [ ${step} = "efcs" ]; then
     [[ ${NTHREADS_REGRID_NEMSIO} -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="${launcher} ${LEVS}"
 
-elif [ ${step} = "post" ]; then
+elif [ "${step}" = "post" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_post}))
 
@@ -169,7 +169,7 @@ elif [ ${step} = "post" ]; then
     [[ ${NTHREADS_DWN} -gt ${nth_max} ]] && export NTHREADS_DWN=${nth_max}
     export APRUN_NP="${launcher}"
 
-elif [ ${step} = "ecen" ]; then
+elif [ "${step}" = "ecen" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_ecen}))
 
@@ -185,7 +185,7 @@ elif [ ${step} = "ecen" ]; then
     [[ ${NTHREADS_CALCINC} -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="${launcher} ${npe_ecen:-${PBS_NP}}"
 
-elif [ ${step} = "esfc" ]; then
+elif [ "${step}" = "esfc" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_esfc}))
 
@@ -198,7 +198,7 @@ elif [ ${step} = "esfc" ]; then
     export APRUN_CYCLE="${launcher} ${npe_esfc}"
 
 
-elif [ ${step} = "epos" ]; then
+elif [ "${step}" = "epos" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_epos}))
 
@@ -206,11 +206,11 @@ elif [ ${step} = "epos" ]; then
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="${launcher} ${npe_epos:-${PBS_NP}}"
 
-elif [ ${step} = "init" ]; then
+elif [ "${step}" = "init" ]; then
 
     export APRUN="${launcher}"
 
-elif [ ${step} = "postsnd" ]; then
+elif [ "${step}" = "postsnd" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_postsnd}))
 
@@ -222,11 +222,11 @@ elif [ ${step} = "postsnd" ]; then
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
     export APRUN_POSTSNDCFP="${launcher} ${npe_postsndcfp}"
 
-elif [ ${step} = "awips" ]; then
+elif [ "${step}" = "awips" ]; then
 
      echo "WARNING: ${step} is not enabled on ${machine}!"
 
-elif [ ${step} = "gempak" ]; then
+elif [ "${step}" = "gempak" ]; then
 
      echo "WARNING: ${step} is not enabled on ${machine}!"
 
