--- a/env/ORION.env
+++ b/env/ORION.env
@@ -36,7 +36,7 @@ ulimit -a
 export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
-if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
+if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -45,14 +45,14 @@ if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
     export sys_tp="ORION"
     export launcher_PREP="srun"
 
-elif [ ${step} = "waveinit" -o ${step} = "waveprep" -o ${step} = "wavepostsbs" -o ${step} = "wavepostbndpnt" -o ${step} = "wavepostpnt" ]; then
+elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostpnt" ]; then
 
     export CFP_MP="YES"
-    if [ ${step} = "waveprep" ]; then export MP_PULSE=0 ; fi
+    if [ "${step}" = "waveprep" ]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd_opt}
 
-elif [ ${step} = "atmanalrun" ]; then
+elif [ "${step}" = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -64,7 +64,7 @@ elif [ ${step} = "atmanalrun" ]; then
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
     export APRUN_ATMANAL="${launcher} -n ${npe_atmanalrun}"
 
-elif [ ${step} = "atmensanalrun" ]; then
+elif [ "${step}" = "atmensanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -76,7 +76,7 @@ elif [ ${step} = "atmensanalrun" ]; then
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="${launcher} -n ${npe_atmensanalrun}"
 
-elif [ ${step} = "aeroanlrun" ]; then
+elif [ "${step}" = "aeroanlrun" ]; then
 
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
@@ -86,7 +86,7 @@ elif [ ${step} = "aeroanlrun" ]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ ${step} = "anal" -o ${step} = "analcalc" ]; then
+elif [ "${step}" = "anal" -o "${step}" = "analcalc" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -114,7 +114,7 @@ elif [ ${step} = "anal" -o ${step} = "analcalc" ]; then
     npe_gausfcanl=${npe_gausfcanl:-1}
     export APRUN_GAUSFCANL="${launcher} -n ${npe_gausfcanl}"
 
-elif [ ${step} = "sfcanl" ]; then
+elif [ "${step}" = "sfcanl" ]; then
     nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
@@ -122,7 +122,7 @@ elif [ ${step} = "sfcanl" ]; then
     npe_sfcanl=${ntiles:-6}
     export APRUN_CYCLE="${launcher} -n ${npe_sfcanl}"
 
-elif [ ${step} = "gldas" ]; then
+elif [ "${step}" = "gldas" ]; then
 
     export USE_CFP="NO"
 
@@ -142,7 +142,7 @@ elif [ ${step} = "gldas" ]; then
     npe_gldas_data_proc=$((${gldas_spinup_hours} + 12))
     export APRUN_GLDAS_DATA_PROC="${launcher} -n ${npe_gldas_data_proc} ${mpmd_opt}"
 
-elif [ ${step} = "eobs" ]; then
+elif [ "${step}" = "eobs" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -157,7 +157,7 @@ elif [ ${step} = "eobs" ]; then
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
     export APRUN_GSI="${launcher} -n ${npe_gsi:-${npe_eobs}}"
 
-elif [ ${step} = "eupd" ]; then
+elif [ "${step}" = "eupd" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -169,7 +169,7 @@ elif [ ${step} = "eupd" ]; then
     [[ ${NTHREADS_ENKF} -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
     export APRUN_ENKF="${launcher} -n ${npe_enkf:-${npe_eupd}}"
 
-elif [ ${step} = "fcst" ]; then
+elif [ "${step}" = "fcst" ]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
     if [[ ${CDUMP} == "gfs" ]]; then
@@ -194,7 +194,7 @@ elif [ ${step} = "fcst" ]; then
     export APRUN_REMAP="${launcher} -n ${npe_remap:-${npe_fcst}}"
     export I_MPI_DAPL_UD="enable"
 
-elif [ ${step} = "efcs" ]; then
+elif [ "${step}" = "efcs" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_efcs}))
 
@@ -207,7 +207,7 @@ elif [ ${step} = "efcs" ]; then
     [[ ${NTHREADS_REGRID_NEMSIO} -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="${launcher} -n ${LEVS}"
 
-elif [ ${step} = "post" ]; then
+elif [ "${step}" = "post" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_post}))
 
@@ -219,7 +219,7 @@ elif [ ${step} = "post" ]; then
     [[ ${NTHREADS_DWN} -gt ${nth_max} ]] && export NTHREADS_DWN=${nth_max}
     export APRUN_DWN="${launcher} -n ${npe_dwn}"
 
-elif [ ${step} = "ecen" ]; then
+elif [ "${step}" = "ecen" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_ecen}))
 
@@ -235,7 +235,7 @@ elif [ ${step} = "ecen" ]; then
     [[ ${NTHREADS_CALCINC} -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="${launcher} -n ${npe_ecen}"
 
-elif [ ${step} = "esfc" ]; then
+elif [ "${step}" = "esfc" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_esfc}))
 
@@ -247,7 +247,7 @@ elif [ ${step} = "esfc" ]; then
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     export APRUN_CYCLE="${launcher} -n ${npe_esfc}"
 
-elif [ ${step} = "epos" ]; then
+elif [ "${step}" = "epos" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_epos}))
 
@@ -255,11 +255,11 @@ elif [ ${step} = "epos" ]; then
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="${launcher} -n ${npe_epos}"
 
-elif [ ${step} = "init" ]; then
+elif [ "${step}" = "init" ]; then
 
     export APRUN="${launcher} -n ${npe_init}"
 
-elif [ ${step} = "postsnd" ]; then
+elif [ "${step}" = "postsnd" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_postsnd}))
 
@@ -271,7 +271,7 @@ elif [ ${step} = "postsnd" ]; then
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
     export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsnd} ${mpmd_opt}"
 
-elif [ ${step} = "awips" ]; then
+elif [ "${step}" = "awips" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_awips}))
 
@@ -279,7 +279,7 @@ elif [ ${step} = "awips" ]; then
     [[ ${NTHREADS_AWIPS} -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
     export APRUN_AWIPSCFP="${launcher} -n ${npe_awips} ${mpmd_opt}"
 
-elif [ ${step} = "gempak" ]; then
+elif [ "${step}" = "gempak" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_gempak}))
 
