--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -24,7 +24,7 @@ export npe_node_max=128
 export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
-if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
+if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -33,13 +33,13 @@ if [ ${step} = "prep" -o ${step} = "prepbufr" ]; then
     export sys_tp="wcoss2"
     export launcher_PREP="mpiexec"
 
-elif [ ${step} = "waveinit" -o ${step} = "waveprep" -o ${step} = "wavepostsbs" -o ${step} = "wavepostbndpnt" -o ${step} = "wavepostbndpntbll"  -o ${step} = "wavepostpnt" ]; then
+elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostbndpntbll"  -o "${step}" = "wavepostpnt" ]; then
 
-    if [ ${step} = "waveprep" -a ${CDUMP} = "gfs" ]; then NTASKS=${NTASKS_gfs} ; fi
+    if [ "${step}" = "waveprep" -a "${CDUMP}" = "gfs" ]; then NTASKS=${NTASKS_gfs} ; fi
     export wavempexec="${launcher} -np"
     export wave_mpmd=${mpmd_opt}
 
-elif [ ${step} = "atmanalrun" ]; then
+elif [ "${step}" = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -51,7 +51,7 @@ elif [ ${step} = "atmanalrun" ]; then
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
     export APRUN_ATMANAL="${launcher} -n ${npe_atmanalrun}"
 
-elif [ ${step} = "atmensanalrun" ]; then
+elif [ "${step}" = "atmensanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -63,7 +63,7 @@ elif [ ${step} = "atmensanalrun" ]; then
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="${launcher} -n ${npe_atmensanalrun}"
 
-elif [ ${step} = "aeroanlrun" ]; then
+elif [ "${step}" = "aeroanlrun" ]; then
 
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
@@ -73,13 +73,13 @@ elif [ ${step} = "aeroanlrun" ]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ ${step} = "anal" -o ${step} = "analcalc" ]; then
+elif [ "${step}" = "anal" -o "${step}" = "analcalc" ]; then
 
     export OMP_PLACES=cores
     export OMP_STACKSIZE=1G
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
-    if [ ${step} = "analcalc" ]; then
+    if [ "${step}" = "analcalc" ]; then
       export MPICH_MPIIO_HINTS="*:romio_cb_write=disable"
     fi
 
@@ -110,7 +110,7 @@ elif [ ${step} = "anal" -o ${step} = "analcalc" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
-elif [ ${step} = "sfcanl" ]; then
+elif [ "${step}" = "sfcanl" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
 
@@ -119,7 +119,7 @@ elif [ ${step} = "sfcanl" ]; then
     npe_sfcanl=${ntiles:-6}
     export APRUN_CYCLE="${launcher} -n ${npe_sfcanl}"
 
-elif [ ${step} = "gldas" ]; then
+elif [ "${step}" = "gldas" ]; then
 
     export USE_CFP="YES"
     export CFP_MP="NO"
@@ -140,7 +140,7 @@ elif [ ${step} = "gldas" ]; then
     npe_gldas_data_proc=$((${gldas_spinup_hours} + 12))
     export APRUN_GLDAS_DATA_PROC="${launcher} -np ${npe_gldas_data_proc} ${mpmd_opt}"
 
-elif [ ${step} = "eobs" ]; then
+elif [ "${step}" = "eobs" ]; then
 
     export OMP_PLACES=cores
     export OMP_STACKSIZE=1G
@@ -156,7 +156,7 @@ elif [ ${step} = "eobs" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
-elif [ ${step} = "eupd" ]; then
+elif [ "${step}" = "eupd" ]; then
 
     export OMP_PLACES=cores
     export OMP_STACKSIZE=2G
@@ -173,7 +173,7 @@ elif [ ${step} = "eupd" ]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
-elif [ ${step} = "fcst" ]; then
+elif [ "${step}" = "fcst" ]; then
 
     export OMP_PLACES=cores
     export OMP_STACKSIZE=2048M
@@ -203,7 +203,7 @@ elif [ ${step} = "fcst" ]; then
     export APRUN_REMAP="${launcher} -n ${npe_remap:-${npe_fcst}}"
     export I_MPI_DAPL_UD="enable"
 
-elif [ ${step} = "efcs" ]; then
+elif [ "${step}" = "efcs" ]; then
 
     export MPICH_MPIIO_HINTS="*:romio_cb_write=disable"
     export FI_OFI_RXM_SAR_LIMIT=3145728
@@ -221,7 +221,7 @@ elif [ ${step} = "efcs" ]; then
     [[ ${NTHREADS_REGRID_NEMSIO} -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="${launcher} -n ${LEVS}"
 
-elif [ ${step} = "post" ]; then
+elif [ "${step}" = "post" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_post}))
 
@@ -233,7 +233,7 @@ elif [ ${step} = "post" ]; then
     [[ ${NTHREADS_DWN} -gt ${nth_max} ]] && export NTHREADS_DWN=${nth_max}
     export APRUN_DWN="${launcher} -np ${npe_dwn} ${mpmd_opt}"
 
-elif [ ${step} = "ecen" ]; then
+elif [ "${step}" = "ecen" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_ecen}))
 
@@ -253,7 +253,7 @@ elif [ ${step} = "ecen" ]; then
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     export APRUN_CYCLE="${launcher} -n ${npe_ecen} -ppn ${npe_node_cycle} --cpu-bind depth --depth ${NTHREADS_CYCLE}"
 
-elif [ ${step} = "esfc" ]; then
+elif [ "${step}" = "esfc" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_esfc}))
 
@@ -265,7 +265,7 @@ elif [ ${step} = "esfc" ]; then
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     export APRUN_CYCLE="${launcher} -n ${npe_esfc} -ppn ${npe_node_cycle} --cpu-bind depth --depth ${NTHREADS_CYCLE}"
 
-elif [ ${step} = "epos" ]; then
+elif [ "${step}" = "epos" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_epos}))
 
@@ -273,11 +273,11 @@ elif [ ${step} = "epos" ]; then
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="${launcher} -n ${npe_epos} -ppn ${npe_node_epos} --cpu-bind depth --depth ${NTHREADS_EPOS}"
 
-elif [ ${step} = "init" ]; then
+elif [ "${step}" = "init" ]; then
 
     export APRUN="${launcher}"
 
-elif [ ${step} = "postsnd" ]; then
+elif [ "${step}" = "postsnd" ]; then
 
     export MPICH_MPIIO_HINTS_DISPLAY=1
     export OMP_NUM_THREADS=1
@@ -292,7 +292,7 @@ elif [ ${step} = "postsnd" ]; then
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
     export APRUN_POSTSNDCFP="${launcher} -np ${npe_postsndcfp} ${mpmd_opt}"
 
-elif [ ${step} = "awips" ]; then
+elif [ "${step}" = "awips" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_awips}))
 
@@ -300,7 +300,7 @@ elif [ ${step} = "awips" ]; then
     [[ ${NTHREADS_AWIPS} -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
     export APRUN_AWIPSCFP="${launcher} -np ${npe_awips} ${mpmd_opt}"
 
-elif [ ${step} = "gempak" ]; then
+elif [ "${step}" = "gempak" ]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_gempak}))
 
@@ -308,11 +308,11 @@ elif [ ${step} = "gempak" ]; then
     [[ ${NTHREADS_GEMPAK} -gt ${nth_max} ]] && export NTHREADS_GEMPAK=${nth_max}
     export APRUN_GEMPAKCFP="${launcher} -np ${npe_gempak} ${mpmd_opt}"
 
-elif [ ${step} = "waveawipsbulls" ]; then
+elif [ "${step}" = "waveawipsbulls" ]; then
 
     unset PERL5LIB
 
-elif [ ${step} = "wafsgrib2" -o ${step} = "wafsgrib20p25" ]; then
+elif [ "${step}" = "wafsgrib2" -o "${step}" = "wafsgrib20p25" ]; then
 
     export USE_CFP=${USE_CFP:-"YES"}
 
