--- a/env/S4.env
+++ b/env/S4.env
@@ -1,6 +1,6 @@
 #!/bin/bash -x
 
-if [ $# -ne 1 ]; then
+if [[ $# -ne 1 ]]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
