Update env files for shellcheck SC2166 and more SC2292
- SC2166 (warning): Prefer [ p ] || [ q ] as [ p -o q ] is not well defined.
- SC2166 (warning): Prefer [ p ] && [ q ] as [ p -a q ] is not well defined.
- Change "-o" to "||" and "-a" to "&&".
- Also apply more SC2292 double brace updates to lines that had SC2166 updates.

Refs #397

--- a/env/JET.env
+++ b/env/JET.env
@@ -32,7 +32,7 @@ ulimit -a
 export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
-if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
+if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -40,7 +40,7 @@ if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
     export BACK=${BACK:-"NO"}
     export sys_tp="JET"
 
-elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostbndpntbll" -o "${step}" = "wavepostpnt" ]; then
+elif [[ "${step}" = "waveinit" ]] || [[ "${step}" = "waveprep" ]] || [[ "${step}" = "wavepostsbs" ]] || [[ "${step}" = "wavepostbndpnt" ]] || [[ "${step}" = "wavepostbndpntbll" ]] || [[ "${step}" = "wavepostpnt" ]]; then
 
     if [[ "${step}" = "waveprep" ]]; then export MP_PULSE=0 ; fi
     export wavempexec=${launcher}
