--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -24,7 +24,7 @@ export npe_node_max=128
 export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
-if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
+if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -33,9 +33,9 @@ if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
     export sys_tp="wcoss2"
     export launcher_PREP="mpiexec"
 
-elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostbndpntbll"  -o "${step}" = "wavepostpnt" ]; then
+elif [[ "${step}" = "waveinit" ]] || [[ "${step}" = "waveprep" ]] || [[ "${step}" = "wavepostsbs" ]] || [[ "${step}" = "wavepostbndpnt" ]] || [[ "${step}" = "wavepostbndpntbll"  ]] || [[ "${step}" = "wavepostpnt" ]]; then
 
-    if [ "${step}" = "waveprep" -a "${CDUMP}" = "gfs" ]; then NTASKS=${NTASKS_gfs} ; fi
+    if [[ "${step}" = "waveprep" ]] && [[ "${CDUMP}" = "gfs" ]]; then NTASKS=${NTASKS_gfs} ; fi
     export wavempexec="${launcher} -np"
     export wave_mpmd=${mpmd_opt}
 
@@ -73,7 +73,7 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ "${step}" = "anal" -o "${step}" = "analcalc" ]; then
+elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
 
     export OMP_PLACES=cores
     export OMP_STACKSIZE=1G
@@ -312,7 +312,7 @@ elif [[ "${step}" = "waveawipsbulls" ]]; then
 
     unset PERL5LIB
 
-elif [ "${step}" = "wafsgrib2" -o "${step}" = "wafsgrib20p25" ]; then
+elif [[ "${step}" = "wafsgrib2" ]] || [[ "${step}" = "wafsgrib20p25" ]]; then
 
     export USE_CFP=${USE_CFP:-"YES"}
 
