--- a/env/HERA.env
+++ b/env/HERA.env
@@ -37,7 +37,7 @@ export job=${PBS_JOBNAME:-${step}}
 export jobid=${job}.${PBS_JOBID:-$$}
 
 
-if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
+if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
     nth_max=$((${npe_node_max} / ${npe_node_prep}))
 
@@ -46,7 +46,7 @@ if [ "${step}" = "prep" -o "${step}" = "prepbufr" ]; then
     export sys_tp="HERA"
     export launcher_PREP="srun"
 
-elif [ "${step}" = "waveinit" -o "${step}" = "waveprep" -o "${step}" = "wavepostsbs" -o "${step}" = "wavepostbndpnt" -o "${step}" = "wavepostbndpntbll" -o "${step}" = "wavepostpnt" ]; then
+elif [[ "${step}" = "waveinit" ]] || [[ "${step}" = "waveprep" ]] || [[ "${step}" = "wavepostsbs" ]] || [[ "${step}" = "wavepostbndpnt" ]] || [[ "${step}" = "wavepostbndpntbll" ]] || [[ "${step}" = "wavepostpnt" ]]; then
 
     export CFP_MP="YES"
     if [[ "${step}" = "waveprep" ]]; then export MP_PULSE=0 ; fi
@@ -87,7 +87,7 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ "${step}" = "anal" -o "${step}" = "analcalc" ]; then
+elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
