--- a/env/HERA.env
+++ b/env/HERA.env
@@ -39,7 +39,7 @@ export jobid=${job}.${PBS_JOBID:-$$}
 
 if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_prep}))
+    nth_max=$((npe_node_max / npe_node_prep))
 
     export POE="NO"
     export BACK="NO"
@@ -59,7 +59,7 @@ elif [[ "${step}" = "atmanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_atmanalrun}))
+    nth_max=$((npe_node_max / npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
@@ -71,7 +71,7 @@ elif [[ "${step}" = "atmensanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_atmensanalrun}))
+    nth_max=$((npe_node_max / npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
@@ -81,7 +81,7 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
 
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_aeroanlrun}))
+    nth_max=$((npe_node_max / npe_node_aeroanlrun))
 
     export NTHREADS_AEROANL=${nth_aeroanlrun:-${nth_max}}
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
@@ -96,7 +96,7 @@ elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_anal}))
+    nth_max=$((npe_node_max / npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-${nth_max}}
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
@@ -117,7 +117,7 @@ elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
     export APRUN_GAUSFCANL="${launcher} -n ${npe_gausfcanl}"
 
 elif [[ "${step}" = "sfcanl" ]]; then
-    nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
+    nth_max=$((npe_node_max / npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
@@ -129,7 +129,7 @@ elif [[ "${step}" = "gldas" ]]; then
     export USE_CFP="NO"
     export CFP_MP="YES"
 
-    nth_max=$((${npe_node_max} / ${npe_node_gldas}))
+    nth_max=$((npe_node_max / npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-${nth_max}}
     [[ ${NTHREADS_GLDAS} -gt ${nth_max} ]] && export NTHREADS_GLDAS=${nth_max}
@@ -142,7 +142,7 @@ elif [[ "${step}" = "gldas" ]]; then
 # Must run data processing with exactly the number of tasks as time
 # periods being processed.
 
-    npe_gldas_data_proc=$((${gldas_spinup_hours} + 12))
+    npe_gldas_data_proc=$((gldas_spinup_hours + 12))
     export APRUN_GLDAS_DATA_PROC="${launcher} -n ${npe_gldas_data_proc} ${mpmd_opt}"
 
 elif [[ "${step}" = "eobs" ]]; then
@@ -150,7 +150,7 @@ elif [[ "${step}" = "eobs" ]]; then
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
 
-    nth_max=$((${npe_node_max} / ${npe_node_eobs}))
+    nth_max=$((npe_node_max / npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-${nth_max}}
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
@@ -162,7 +162,7 @@ elif [[ "${step}" = "eobs" ]]; then
 
 elif [[ "${step}" = "eupd" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_eupd}))
+    nth_max=$((npe_node_max / npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-${nth_max}}
     [[ ${NTHREADS_ENKF} -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
@@ -181,7 +181,7 @@ elif [[ "${step}" = "fcst" ]]; then
         nth_fv3=${nth_fv3_gfs}
     fi
 
-    nth_max=$((${npe_node_max} / ${npe_node_fcst}))
+    nth_max=$((npe_node_max / npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
@@ -199,7 +199,7 @@ elif [[ "${step}" = "fcst" ]]; then
 
 elif [[ "${step}" = "efcs" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_efcs}))
+    nth_max=$((npe_node_max / npe_node_efcs))
 
     export NTHREADS_FV3=${nth_efcs:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
@@ -212,7 +212,7 @@ elif [[ "${step}" = "efcs" ]]; then
 
 elif [[ "${step}" = "post" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_post}))
+    nth_max=$((npe_node_max / npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
     [[ ${NTHREADS_NP} -gt ${nth_max} ]] && export NTHREADS_NP=${nth_max}
@@ -224,7 +224,7 @@ elif [[ "${step}" = "post" ]]; then
 
 elif [[ "${step}" = "ecen" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_ecen}))
+    nth_max=$((npe_node_max / npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-${nth_max}}
     [[ ${NTHREADS_ECEN} -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
@@ -240,7 +240,7 @@ elif [[ "${step}" = "ecen" ]]; then
 
 elif [[ "${step}" = "esfc" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_esfc}))
+    nth_max=$((npe_node_max / npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-${nth_max}}
     [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
@@ -252,7 +252,7 @@ elif [[ "${step}" = "esfc" ]]; then
 
 elif [[ "${step}" = "epos" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_epos}))
+    nth_max=$((npe_node_max / npe_node_epos))
 
     export NTHREADS_EPOS=${nth_epos:-${nth_max}}
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
@@ -264,7 +264,7 @@ elif [[ "${step}" = "init" ]]; then
 
 elif [[ "${step}" = "postsnd" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_postsnd}))
+    nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
     [[ ${NTHREADS_POSTSND} -gt ${nth_max} ]] && export NTHREADS_POSTSND=${nth_max}
@@ -276,7 +276,7 @@ elif [[ "${step}" = "postsnd" ]]; then
 
 elif [[ "${step}" = "awips" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_awips}))
+    nth_max=$((npe_node_max / npe_node_awips))
 
     export NTHREADS_AWIPS=${nth_awips:-2}
     [[ ${NTHREADS_AWIPS} -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
@@ -284,7 +284,7 @@ elif [[ "${step}" = "awips" ]]; then
 
 elif [[ "${step}" = "gempak" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_gempak}))
+    nth_max=$((npe_node_max / npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
     [[ ${NTHREADS_GEMPAK} -gt ${nth_max} ]] && export NTHREADS_GEMPAK=${nth_max}
