--- a/env/JET.env
+++ b/env/JET.env
@@ -34,7 +34,7 @@ export jobid=${job}.${PBS_JOBID:-$$}
 
 if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_prep}))
+    nth_max=$((npe_node_max / npe_node_prep))
 
     export POE="NO"
     export BACK=${BACK:-"NO"}
@@ -48,7 +48,7 @@ elif [[ "${step}" = "waveinit" ]] || [[ "${step}" = "waveprep" ]] || [[ "${step}
 
 elif [[ "${step}" = "atmanalrun" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_atmanalrun}))
+    nth_max=$((npe_node_max / npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
@@ -56,7 +56,7 @@ elif [[ "${step}" = "atmanalrun" ]]; then
 
 elif [[ "${step}" = "atmensanalrun" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_atmensanalrun}))
+    nth_max=$((npe_node_max / npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
@@ -64,7 +64,7 @@ elif [[ "${step}" = "atmensanalrun" ]]; then
 
 elif [[ "${step}" = "anal" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_anal}))
+    nth_max=$((npe_node_max / npe_node_anal))
 
     export NTHREADS_GSI=${nth_gsi:-${nth_max}}
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
@@ -84,7 +84,7 @@ elif [[ "${step}" = "anal" ]]; then
     export APRUN_GAUSFCANL="${launcher} ${npe_gausfcanl}"
 
 elif [[ "${step}" = "sfcanl" ]]; then
-    nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
+    nth_max=$((npe_node_max / npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
@@ -93,7 +93,7 @@ elif [[ "${step}" = "sfcanl" ]]; then
 
 elif [[ "${step}" = "gldas" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_gldas}))
+    nth_max=$((npe_node_max / npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-${nth_max}}
     [[ ${NTHREADS_GLDAS} -gt ${nth_max} ]] && export NTHREADS_GLDAS=${nth_max}
@@ -105,7 +105,7 @@ elif [[ "${step}" = "gldas" ]]; then
 
 elif [[ "${step}" = "eobs" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_eobs}))
+    nth_max=$((npe_node_max / npe_node_eobs))
 
     export NTHREADS_GSI=${nth_gsi:-${nth_max}}
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
@@ -113,7 +113,7 @@ elif [[ "${step}" = "eobs" ]]; then
 
 elif [[ "${step}" = "eupd" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_eupd}))
+    nth_max=$((npe_node_max / npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_enkf:-${nth_max}}
     [[ ${NTHREADS_ENKF} -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
@@ -128,7 +128,7 @@ elif [[ "${step}" = "fcst" ]]; then
         nth_fv3=${nth_fv3_gfs}
     fi
 
-    nth_max=$((${npe_node_max} / ${npe_node_fcst}))
+    nth_max=$((npe_node_max / npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
@@ -146,7 +146,7 @@ elif [[ "${step}" = "fcst" ]]; then
 
 elif [[ "${step}" = "efcs" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_efcs}))
+    nth_max=$((npe_node_max / npe_node_efcs))
 
     export NTHREADS_FV3=${nth_fv3:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
@@ -159,7 +159,7 @@ elif [[ "${step}" = "efcs" ]]; then
 
 elif [[ "${step}" = "post" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_post}))
+    nth_max=$((npe_node_max / npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
     [[ ${NTHREADS_NP} -gt ${nth_max} ]] && export NTHREADS_NP=${nth_max}
@@ -171,7 +171,7 @@ elif [[ "${step}" = "post" ]]; then
 
 elif [[ "${step}" = "ecen" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_ecen}))
+    nth_max=$((npe_node_max / npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-${nth_max}}
     [[ ${NTHREADS_ECEN} -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
@@ -187,7 +187,7 @@ elif [[ "${step}" = "ecen" ]]; then
 
 elif [[ "${step}" = "esfc" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_esfc}))
+    nth_max=$((npe_node_max / npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-${nth_max}}
     [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
@@ -200,7 +200,7 @@ elif [[ "${step}" = "esfc" ]]; then
 
 elif [[ "${step}" = "epos" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_epos}))
+    nth_max=$((npe_node_max / npe_node_epos))
 
     export NTHREADS_EPOS=${nth_epos:-${nth_max}}
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
@@ -212,7 +212,7 @@ elif [[ "${step}" = "init" ]]; then
 
 elif [[ "${step}" = "postsnd" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_postsnd}))
+    nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
     [[ ${NTHREADS_POSTSND} -gt ${nth_max} ]] && export NTHREADS_POSTSND=${nth_max}
