--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -26,7 +26,7 @@ export jobid=${job}.${PBS_JOBID:-$$}
 
 if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_prep}))
+    nth_max=$((npe_node_max / npe_node_prep))
 
     export POE=${POE:-"YES"}
     export BACK=${BACK:-"off"}
@@ -45,7 +45,7 @@ elif [[ "${step}" = "atmanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_atmanalrun}))
+    nth_max=$((npe_node_max / npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMANAL} -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
@@ -57,7 +57,7 @@ elif [[ "${step}" = "atmensanalrun" ]]; then
     export USE_CFP=${USE_CFP:-"YES"}
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_atmensanalrun}))
+    nth_max=$((npe_node_max / npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-${nth_max}}
     [[ ${NTHREADS_ATMENSANAL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
@@ -67,7 +67,7 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
 
     export APRUNCFP="${launcher} -np \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_aeroanlrun}))
+    nth_max=$((npe_node_max / npe_node_aeroanlrun))
 
     export NTHREADS_AEROANL=${nth_aeroanlrun:-${nth_max}}
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
@@ -83,7 +83,7 @@ elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
       export MPICH_MPIIO_HINTS="*:romio_cb_write=disable"
     fi
 
-    nth_max=$((${npe_node_max} / ${npe_node_anal}))
+    nth_max=$((npe_node_max / npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-${nth_max}}
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
@@ -112,7 +112,7 @@ elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
 
 elif [[ "${step}" = "sfcanl" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_sfcanl}))
+    nth_max=$((npe_node_max / npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
@@ -124,7 +124,7 @@ elif [[ "${step}" = "gldas" ]]; then
     export USE_CFP="YES"
     export CFP_MP="NO"
 
-    nth_max=$((${npe_node_max} / ${npe_node_gldas}))
+    nth_max=$((npe_node_max / npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-${nth_max}}
     [[ ${NTHREADS_GLDAS} -gt ${nth_max} ]] && export NTHREADS_GLDAS=${nth_max}
@@ -137,7 +137,7 @@ elif [[ "${step}" = "gldas" ]]; then
     # Must run data processing with exactly the number of tasks as time
     # periods being processed.
     export USE_CFP=${USE_CFP:-"YES"}
-    npe_gldas_data_proc=$((${gldas_spinup_hours} + 12))
+    npe_gldas_data_proc=$((gldas_spinup_hours + 12))
     export APRUN_GLDAS_DATA_PROC="${launcher} -np ${npe_gldas_data_proc} ${mpmd_opt}"
 
 elif [[ "${step}" = "eobs" ]]; then
@@ -146,7 +146,7 @@ elif [[ "${step}" = "eobs" ]]; then
     export OMP_STACKSIZE=1G
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
-    nth_max=$((${npe_node_max} / ${npe_node_eobs}))
+    nth_max=$((npe_node_max / npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-${nth_max}}
     [[ ${NTHREADS_GSI} -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
@@ -163,7 +163,7 @@ elif [[ "${step}" = "eupd" ]]; then
     export MPICH_COLL_OPT_OFF=1
     export FI_OFI_RXM_SAR_LIMIT=3145728
 
-    nth_max=$((${npe_node_max} / ${npe_node_eupd}))
+    nth_max=$((npe_node_max / npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-${nth_max}}
     [[ ${NTHREADS_ENKF} -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
@@ -187,7 +187,7 @@ elif [[ "${step}" = "fcst" ]]; then
         nth_fv3=${nth_fv3_gfs}
     fi
 
-    nth_max=$((${npe_node_max} / ${npe_node_fcst}))
+    nth_max=$((npe_node_max / npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
@@ -210,7 +210,7 @@ elif [[ "${step}" = "efcs" ]]; then
     export FI_OFI_RXM_RX_SIZE=40000
     export FI_OFI_RXM_TX_SIZE=40000
 
-    nth_max=$((${npe_node_max} / ${npe_node_efcs}))
+    nth_max=$((npe_node_max / npe_node_efcs))
 
     export NTHREADS_FV3=${nth_efcs:-${nth_max}}
     [[ ${NTHREADS_FV3} -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
@@ -223,7 +223,7 @@ elif [[ "${step}" = "efcs" ]]; then
 
 elif [[ "${step}" = "post" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_post}))
+    nth_max=$((npe_node_max / npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
     [[ ${NTHREADS_NP} -gt ${nth_max} ]] && export NTHREADS_NP=${nth_max}
@@ -235,7 +235,7 @@ elif [[ "${step}" = "post" ]]; then
 
 elif [[ "${step}" = "ecen" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_ecen}))
+    nth_max=$((npe_node_max / npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-${nth_max}}
     [[ ${NTHREADS_ECEN} -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
@@ -255,7 +255,7 @@ elif [[ "${step}" = "ecen" ]]; then
 
 elif [[ "${step}" = "esfc" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_esfc}))
+    nth_max=$((npe_node_max / npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-${nth_max}}
     [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
@@ -267,7 +267,7 @@ elif [[ "${step}" = "esfc" ]]; then
 
 elif [[ "${step}" = "epos" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_epos}))
+    nth_max=$((npe_node_max / npe_node_epos))
 
     export NTHREADS_EPOS=${nth_epos:-${nth_max}}
     [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
@@ -282,7 +282,7 @@ elif [[ "${step}" = "postsnd" ]]; then
     export MPICH_MPIIO_HINTS_DISPLAY=1
     export OMP_NUM_THREADS=1
 
-    nth_max=$((${npe_node_max} / ${npe_node_postsnd}))
+    nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
     [[ ${NTHREADS_POSTSND} -gt ${nth_max} ]] && export NTHREADS_POSTSND=${nth_max}
@@ -294,7 +294,7 @@ elif [[ "${step}" = "postsnd" ]]; then
 
 elif [[ "${step}" = "awips" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_awips}))
+    nth_max=$((npe_node_max / npe_node_awips))
 
     export NTHREADS_AWIPS=${nth_awips:-2}
     [[ ${NTHREADS_AWIPS} -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
@@ -302,7 +302,7 @@ elif [[ "${step}" = "awips" ]]; then
 
 elif [[ "${step}" = "gempak" ]]; then
 
-    nth_max=$((${npe_node_max} / ${npe_node_gempak}))
+    nth_max=$((npe_node_max / npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
     [[ ${NTHREADS_GEMPAK} -gt ${nth_max} ]] && export NTHREADS_GEMPAK=${nth_max}
