Update WCOSS2 env file for SC2034
- SC2034 (warning): NTASKS appears unused. Verify use (or export if used externally).
- Add "export" for NTASKS variable setting in waveprep if-block.

Refs #397

--- a/env/WCOSS2.env
+++ b/env/WCOSS2.env
@@ -35,7 +35,7 @@ if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
 
 elif [[ "${step}" = "waveinit" ]] || [[ "${step}" = "waveprep" ]] || [[ "${step}" = "wavepostsbs" ]] || [[ "${step}" = "wavepostbndpnt" ]] || [[ "${step}" = "wavepostbndpntbll"  ]] || [[ "${step}" = "wavepostpnt" ]]; then
 
-    if [[ "${step}" = "waveprep" ]] && [[ "${CDUMP}" = "gfs" ]]; then NTASKS=${NTASKS_gfs} ; fi
+    if [[ "${step}" = "waveprep" ]] && [[ "${CDUMP}" = "gfs" ]]; then export NTASKS=${NTASKS_gfs} ; fi
     export wavempexec="${launcher} -np"
     export wave_mpmd=${mpmd_opt}
 
