added marine da

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -87,6 +87,16 @@ elif [ $step = "aeroanlrun" ]; then
     [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
     export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
 
+elif [ $step = "ocnanalrun" ]; then
+
+    export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
+
+    nth_max=$((${npe_node_max} / ${npe_node_ocnanalrun}))
+
+    export NTHREADS_OCNANAL=${nth_ocnanalrun:-${nth_max}}
+    [[ ${NTHREADS_OCNANAL} -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
+    export APRUN_OCNANAL="${launcher} -n ${npe_ocnanalrun}"
+
 elif [ $step = "anal" -o $step = "analcalc" ]; then
 
     export MKL_NUM_THREADS=4
