--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ __pycache__
 .DS_Store
 .idea/
 
+# Ignore editor generated backup files
+#-------------------------------------
+*~
 # Ignore folders
 #-------------------
 exec/
