allow for modifying any config file from a higher yaml

--- a/workflow/hosts/s4.yaml
+++ b/workflow/hosts/s4.yaml
@@ -1,23 +1,23 @@
-base_git: '/data/prod/glopara/git'
-dmpdir: '/data/prod/glopara/dump'
-packageroot: '/data/prod/glopara/nwpara'
-comroot: '/data/prod/glopara/com'
-cominsyn: '${COMROOT}/gfs/prod/syndat'
-homedir: '/data/users/$USER'
-stmp: '/scratch/users/$USER'
-ptmp: '/scratch/users/$USER'
-noscrub: $HOMEDIR
-account: star
-scheduler: slurm
-queue: s4
-queue_service: serial
-partition_batch: s4
-partition_service: serial
-chgrp_rstprod: 'NO'
-chgrp_cmd: 'ls'
-hpssarch: 'NO'
-localarch: 'NO'
-atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
-make_nsstbufr: 'YES'
-make_acftbufr: 'YES'
-supported_resolutions: ['C384', 'C192', 'C96', 'C48']
+BASE_GIT: '/data/prod/glopara/git'
+DMPDIR: '/data/prod/glopara/dump'
+PACKAGEROOT: '/data/prod/glopara/nwpara'
+COMROOT: '/data/prod/glopara/com'
+COMINsyn: '${COMROOT}/gfs/prod/syndat'
+HOMEDIR: '/data/users/${USER}'
+STMP: '/scratch/users/${USER}'
+PTMP: '/scratch/users/${USER}'
+NOSCRUB: ${HOMEDIR}
+ACCOUNT: star
+SCHEDULER: slurm
+QUEUE: s4
+QUEUE_SERVICE: serial
+PARTITION_BATCH: s4
+PARTITION_SERVICE: serial
+CHGRP_RSTPROD: 'NO'
+CHGRP_CMD: 'ls'
+HPSSARCH: 'NO'
+LOCALARCH: 'NO'
+ATARDIR: '${NOSCRUB}/archive_rotdir/${PSLOT}'
+MAKE_NSSTBUFR: 'YES'
+MAKE_ACFTBUFR: 'YES'
+SUPPORTED_RESOLUTIONS: ['C384', 'C192', 'C96', 'C48']
