--- a/workflow/hosts/hera.yaml
+++ b/workflow/hosts/hera.yaml
@@ -1,23 +1,23 @@
-base_git: '/scratch1/NCEPDEV/global/glopara/git'
-dmpdir: '/scratch1/NCEPDEV/global/glopara/dump'
-packageroot: '/scratch1/NCEPDEV/global/glopara/nwpara'
-comroot: '/scratch1/NCEPDEV/global/glopara/com'
-cominsyn: '${COMROOT}/gfs/prod/syndat'
-homedir: '/scratch1/NCEPDEV/global/$USER'
-stmp: '/scratch1/NCEPDEV/stmp2/$USER'
-ptmp: '/scratch1/NCEPDEV/stmp4/$USER'
-noscrub: $HOMEDIR
-account: fv3-cpu
-scheduler: slurm
-queue: batch
-queue_service: batch
-partition_batch: hera
-partition_service: service
-chgrp_rstprod: 'YES'
-chgrp_cmd: 'chgrp rstprod'
-hpssarch: 'YES'
-localarch: 'NO'
-atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
-make_nsstbufr: 'NO'
-make_acftbufr: 'NO'
-supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
+BASE_GIT: '/scratch1/NCEPDEV/global/glopara/git'
+DMPDIR: '/scratch1/NCEPDEV/global/glopara/dump'
+PACKAGEROOT: '/scratch1/NCEPDEV/global/glopara/nwpara'
+COMROOT: '/scratch1/NCEPDEV/global/glopara/com'
+COMINsyn: '${COMROOT}/gfs/prod/syndat'
+HOMEDIR: '/scratch1/NCEPDEV/global/${USER}'
+STMP: '/scratch1/NCEPDEV/stmp2/${USER}'
+PTMP: '/scratch1/NCEPDEV/stmp4/${USER}'
+NOSCRUB: $HOMEDIR
+ACCOUNT: fv3-cpu
+SCHEDULER: slurm
+QUEUE: batch
+QUEUE_SERVICE: batch
+PARTITION_BATCH: hera
+PARTITION_SERVICE: service
+CHGRP_RSTPROD: 'YES'
+CHGRP_CMD: 'chgrp rstprod'
+HPSSARCH: 'YES'
+LOCALARCH: 'NO'
+ATARDIR: '/NCEPDEV/${HPSS_PROJECT}/1year/${USER}/${machine}/scratch/${PSLOT}'
+MAKE_NSSTBUFR: 'NO'
+MAKE_ACFTBUFR: 'NO'
+SUPPORTED_RESOLUTIONS: ['C768', 'C384', 'C192', 'C96', 'C48']
