--- a/workflow/hosts/orion.yaml
+++ b/workflow/hosts/orion.yaml
@@ -1,23 +1,23 @@
-base_git: '/work/noaa/global/glopara/git'
-dmpdir: '/work/noaa/rstprod/dump'
-packageroot: '/work/noaa/global/glopara/nwpara'
-comroot: '/work/noaa/global/glopara/com'
-cominsyn: '${COMROOT}/gfs/prod/syndat'
-homedir: '/work/noaa/global/$USER'
-stmp: '/work/noaa/stmp/$USER'
-ptmp: '/work/noaa/stmp/$USER'
-noscrub: $HOMEDIR
-scheduler: slurm
-account: fv3-cpu
-queue: batch
-queue_service: batch
-partition_batch: orion
-partition_service: service
-chgrp_rstprod: 'YES'
-chgrp_cmd: 'chgrp rstprod'
-hpssarch: 'NO'
-localarch: 'NO'
-atardir: '$NOSCRUB/archive_rotdir/$PSLOT'
-make_nsstbufr: 'NO'
-make_acftbufr: 'NO'
-supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
+BASE_GIT: '/work/noaa/global/glopara/git'
+DMPDIR: '/work/noaa/rstprod/dump'
+PACKAGEROOT: '/work/noaa/global/glopara/nwpara'
+COMROOT: '/work/noaa/global/glopara/com'
+COMINsyn: '${COMROOT}/gfs/prod/syndat'
+HOMEDIR: '/work/noaa/global/${USER}'
+STMP: '/work/noaa/stmp/${USER}'
+PTMP: '/work/noaa/stmp/${USER}'
+NOSCRUB: $HOMEDIR
+SCHEDULER: slurm
+ACCOUNT: fv3-cpu
+QUEUE: batch
+QUEUE_SERVICE: batch
+PARTITION_BATCH: orion
+PARTITION_SERVICE: service
+CHGRP_RSTPROD: 'YES'
+CHGRP_CMD: 'chgrp rstprod'
+HPSSARCH: 'NO'
+LOCALARCH: 'NO'
+ATARDIR: '${NOSCRUB}/archive_rotdir/${PSLOT}'
+MAKE_NSSTBUFR: 'NO'
+MAKE_ACFTBUFR: 'NO'
+SUPPORTED_RESOLUTIONS: ['C768', 'C384', 'C192', 'C96', 'C48']
