--- a/env/ORION.env
+++ b/env/ORION.env
@@ -86,11 +86,11 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ $step = "ocnanalrun" ]; then
+elif [ ${step} = "ocnanalrun" ]; then
 
     export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
-    nth_max=$((${npe_node_max} / ${npe_node_ocnanalrun}))
+    nth_max=$((npe_node_max / npe_node_ocnanalrun))
 
     export NTHREADS_OCNANAL=${nth_ocnanalrun:-${nth_max}}
     [[ $NTHREADS_OCNANAL -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
