--- a/env/ORION.env
+++ b/env/ORION.env
@@ -91,7 +91,7 @@ elif [ ${step} = "ocnanalrun" ]; then
 
     export NTHREADS_OCNANAL=${nth_ocnanalrun:-${nth_max}}
     [[ $NTHREADS_OCNANAL -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
-    export APRUN_OCNANAL="${launcher} -n ${npe_aeroanlrun}"
+    export APRUN_OCNANAL="${launcher} -n ${npe_ocnanalrun}"
 
 elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
 
