Add tests for configuration.py (#1192)
Add tests to configuration.py
Update README.md to illustrate developers how to run tests locally and manually
Add .gitignore to pygw

--- a/.github/workflows/pytests.yaml
+++ b/.github/workflows/pytests.yaml
@@ -15,12 +15,12 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
-      - name: Install (upgrade) dependencies
+      - name: Install (upgrade) python dependencies
         run: |
           pip install --upgrade pip
 
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           path: global-workflow
 
