Fix post sounding job (#1212)
A few minor errors were blocking the sounding job from completing successfully:
- CFP APRUN command was using incorrect number of PEs
- Updates were needed to run on Orion. Removed the machine-specific code for Hera and Jet so it runs the same on all machines, while refactoring it to use C-style loop.
- Bash base errors (see also #1195), which are now corrected, while refactoring to use C-style loop.

This is part of a package of PRs that were tested together as part of a j-job refactor.

Refs #1195
Fixes #1211

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -270,6 +270,8 @@ elif [[ "${step}" = "init" ]]; then
 
 elif [[ "${step}" = "postsnd" ]]; then
 
+    export CFP_MP="YES"
+
     nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
@@ -278,7 +280,7 @@ elif [[ "${step}" = "postsnd" ]]; then
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
-    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsnd} ${mpmd_opt}"
+    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsndcfp} ${mpmd_opt}"
 
 elif [[ "${step}" = "awips" ]]; then
 
