nth time is the charm

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,9 +13,9 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  create_documentation:
+  documentation:
     runs-on: ubuntu-latest
-    name: Deploy documentation
+    name: Build and deploy documentation
 
     steps:
     - name: Setup Python
