glory to linter

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -83,7 +83,7 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ ${step} = "ocnanalbmat" ]; then
+elif [[ "${step}" = "ocnanalbmat" ]]; then
 
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
@@ -93,7 +93,7 @@ elif [ ${step} = "ocnanalbmat" ]; then
     [[ ${NTHREADS_OCNANAL} -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
     export APRUN_OCNANAL="${launcher} -n ${npe_ocnanalbmat}"
 
-elif [ ${step} = "ocnanalrun" ]; then
+elif [[ "${step}" = "ocnanalrun" ]]; then
 
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
