feed the linter

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -90,7 +90,7 @@ elif [[ "${step}" = "ocnanalbmat" ]]; then
     nth_max=$((npe_node_max / npe_node_ocnanalbmat))
 
     export NTHREADS_OCNANAL=${nth_ocnanalbmat:-${nth_max}}
-    [[ $NTHREADS_OCNANAL -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
+    [[ ${NTHREADS_OCNANAL} -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
     export APRUN_OCNANAL="${launcher} -n ${npe_ocnanalbmat}"
 
 elif [[ "${step}" = "ocnanalrun" ]]; then
@@ -100,7 +100,7 @@ elif [[ "${step}" = "ocnanalrun" ]]; then
     nth_max=$((npe_node_max / npe_node_ocnanalrun))
 
     export NTHREADS_OCNANAL=${nth_ocnanalrun:-${nth_max}}
-    [[ $NTHREADS_OCNANAL -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
+    [[ ${NTHREADS_OCNANAL} -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
     export APRUN_OCNANAL="${launcher} -n ${npe_ocnanalrun}"
 
 elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
