ci(lint): Add missing permission and update ShellCheck Action

--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -11,8 +11,11 @@ defaults:
     shell: bash -o pipefail {0}
 
 jobs:
-  lint:
+  lint-shell:
     runs-on: ubuntu-latest
+
+    permissions:
+      security-events: write
 
     steps:
       - name: Checkout code
@@ -20,7 +23,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Lint shell scripts
-        uses: redhat-plumbers-in-action/differential-shellcheck@v3
+      - id: ShellCheck
+        name: Lint shell scripts
+        uses: redhat-plumbers-in-action/differential-shellcheck@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      - if: ${{ always() }}
+        name: Upload artifact with ShellCheck defects in SARIF format
+        uses: actions/upload-artifact@v3
+        with:
+          name: Differential ShellCheck SARIF
+          path: ${{ steps.ShellCheck.outputs.sarif }}
