Updated Jet environment file. #357

--- a/env/JET.env
+++ b/env/JET.env
@@ -1,10 +1,11 @@
-#!/bin/ksh -x
+#! /usr/bin/env bash
 
 if [[ $# -ne 1 ]]; then
 
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
     echo "atmanalrun atmensanalrun"
+    echo "aeroanlrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -80,7 +81,17 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     [[ ${NTHREADS_AEROANL} -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
-elif [ ${step} = "ocnanalrun" ]; then
+elif [[ "${step}" = "ocnanalbmat" ]]; then
+
+    export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
+
+    nth_max=$((npe_node_max / npe_node_ocnanalbmat))
+
+    export NTHREADS_OCNANAL=${nth_ocnanalbmat:-${nth_max}}
+    [[ ${NTHREADS_OCNANAL} -gt ${nth_max} ]] && export NTHREADS_OCNANAL=${nth_max}
+    export APRUN_OCNANAL="${launcher} -n ${npe_ocnanalbmat}"
+
+elif [[ "${step}" = "ocnanalrun" ]]; then
 
     export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
 
@@ -231,7 +242,7 @@ elif [[ "${step}" = "ecen" ]]; then
 
     export NTHREADS_ECEN=${nth_ecen:-${nth_max}}
     [[ ${NTHREADS_ECEN} -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
-    export APRUN_ECEN="${launcher}"
+    export APRUN_ECEN="${launcher} -n ${npe_ecen}"
 
     export NTHREADS_CHGRES=${nth_chgres:-12}
     [[ ${NTHREADS_CHGRES} -gt ${npe_node_max} ]] && export NTHREADS_CHGRES=${npe_node_max}
@@ -267,6 +278,8 @@ elif [[ "${step}" = "init" ]]; then
 
 elif [[ "${step}" = "postsnd" ]]; then
 
+    export CFP_MP="YES"
+
     nth_max=$((npe_node_max / npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
@@ -275,7 +288,7 @@ elif [[ "${step}" = "postsnd" ]]; then
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
-    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsnd} ${mpmd_opt}"
+    export APRUN_POSTSNDCFP="${launcher} -n ${npe_postsndcfp} ${mpmd_opt}"
 
 elif [[ "${step}" = "awips" ]]; then
 
