Fix quoting errors in S4.env. #1297

--- a/env/S4.env
+++ b/env/S4.env
@@ -82,10 +82,10 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
     export APRUN_AEROANL="${launcher} -n ${npe_aeroanlrun}"
 
 elif [[ "${step}" = "ocnanalbmat" ]]; then
-     echo "WARNING: "${step}" is not enabled on S4!"
+     echo "WARNING: ${step} is not enabled on S4!"
 
 elif [[ "${step}" = "ocnanalrun" ]]; then
-     echo "WARNING: "${step}" is not enabled on S4!"
+     echo "WARNING: ${step} is not enabled on S4!"
 
 elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
 
@@ -278,9 +278,9 @@ elif [[ "${step}" = "postsnd" ]]; then
 
 elif [[ "${step}" = "awips" ]]; then
 
-     echo "WARNING: "${step}" is not enabled on S4!"
+     echo "WARNING: ${step} is not enabled on S4!"
 
 elif [[ "${step}" = "gempak" ]]; then
 
-     echo "WARNING: "${step}" is not enabled on S4!"
+     echo "WARNING: ${step} is not enabled on S4!"
 fi
