Update jet environment after C192, C384, partial C768 testing.  #357

--- a/env/JET.env
+++ b/env/JET.env
@@ -22,7 +22,7 @@ elif [[ "${PARTITION_BATCH}" = "vjet" ]]; then
 elif [[ "${PARTITION_BATCH}" = "kjet" ]]; then
   export npe_node_max=40
 fi
-export launcher="srun -l --export=ALL"
+export launcher="srun -l --epilog=/apps/local/bin/report-mem --export=ALL"
 export mpmd_opt="--multi-prog"
 
 # Configure MPI environment
@@ -39,6 +39,7 @@ if [[ "${step}" = "prep" ]] || [[ "${step}" = "prepbufr" ]]; then
     export POE="NO"
     export BACK="NO"
     export sys_tp="JET"
+    export launcher_PREP="srun"
 
 elif [[ "${step}" = "waveinit" ]] || [[ "${step}" = "waveprep" ]] || [[ "${step}" = "wavepostsbs" ]] || [[ "${step}" = "wavepostbndpnt" ]] || [[ "${step}" = "wavepostbndpntbll" ]] || [[ "${step}" = "wavepostpnt" ]]; then
 
@@ -83,7 +84,7 @@ elif [[ "${step}" = "aeroanlrun" ]]; then
 
 elif [[ "${step}" = "ocnanalbmat" ]]; then
 
-    export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
+    export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
     nth_max=$((npe_node_max / npe_node_ocnanalbmat))
 
@@ -93,7 +94,7 @@ elif [[ "${step}" = "ocnanalbmat" ]]; then
 
 elif [[ "${step}" = "ocnanalrun" ]]; then
 
-    export APRUNCFP="${launcher} -n \$ncmd --multi-prog"
+    export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
 
     nth_max=$((npe_node_max / npe_node_ocnanalrun))
 
@@ -124,7 +125,6 @@ elif [[ "${step}" = "anal" ]] || [[ "${step}" = "analcalc" ]]; then
     [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
     npe_cycle=${ntiles:-6}
     export APRUN_CYCLE="${launcher} -n ${npe_cycle}"
-
 
     export NTHREADS_GAUSFCANL=1
     npe_gausfcanl=${npe_gausfcanl:-1}
