--- a/workflow/hosts/jet.yaml
+++ b/workflow/hosts/jet.yaml
@@ -20,4 +20,4 @@ LOCALARCH: 'NO'
 ATARDIR: '/NCEPDEV/${HPSS_PROJECT}/1year/${USER}/${machine}/scratch/${PSLOT}'
 MAKE_NSSTBUFR: 'NO'
 MAKE_ACFTBUFR: 'NO'
-SUPPORTED_RESOLUTIONS: ['C96', 'C48']
+SUPPORTED_RESOLUTIONS: ['C384', 'C192', 'C96', 'C48']
