update hashes to ufs-utils following merge of noahmp gcycle update

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -15,11 +15,9 @@ protocol = git
 required = True
 
 [UFS-Utils]
-#hash = 8b990c0
-hash = feature/cycle_noahmp
+hash = 86989df
 local_path = sorc/ufs_utils.fd
-#repo_url = https://github.com/ufs-community/UFS_UTILS.git
-repo_url = https://github.com/GeorgeGayno-NOAA/UFS_UTILS.git
+repo_url = https://github.com/ufs-community/UFS_UTILS.git
 protocol = git
 required = True
 
