Update ufs_utils hash that supports global_cycle with NoahMP. (#1315)
- Updates ufs_utils hash that contains upgrades to `global_cycle` that  updates only the greenness fraction.  This update expects a pre-existing surface restart file to be updated.
- Corressponding updates to scripts that call `global_cycle` to stage the surface restart file to update.
- Updates to `checkout.sh` and `Externals.cfg`.  Temporary pointers to [this](https://github.com/GeorgeGayno-NOAA/UFS_UTILS/tree/feature/cycle_noahmp) branch until `develop` in `ufs_utils` is updated.
- Updates to `setup_expt.py` to force using the same `CCPP_SUITE` and `IMP_PHYSICS` for cycled and forecast-only modes and all apps.
- Only builds utilities from ufs_utils that are used in the GFS application.

@GeorgeGayno-NOAA still needs to work with the land team to determine which fields (other than greenness fraction) need to be updated through `global_cycle`.

Depends on https://github.com/ufs-community/UFS_UTILS/pull/774
Fixes #1314 

Updating the UFS_utils hash will also resolve #1275 
Fixes #1275

--- a/Externals.cfg
+++ b/Externals.cfg
@@ -15,9 +15,9 @@ protocol = git
 required = True
 
 [UFS-Utils]
-hash = 8b990c0
+hash = 5b67e4d
 local_path = sorc/ufs_utils.fd
-repo_url = https://github.com/NOAA-EMC/UFS_UTILS.git
+repo_url = https://github.com/ufs-community/UFS_UTILS.git
 protocol = git
 required = True
 
