update UFS-DA atm ens components to python g-w (#1313)

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -5,7 +5,7 @@ if [[ $# -ne 1 ]]; then
     echo "Must specify an input argument to set runtime environment variables!"
     echo "argument can be any one of the following:"
     echo "atmanalrun atmensanalrun"
-    echo "atmanlrun aeroanlrun"
+    echo "atmanlrun atmensanlrun aeroanlrun"
     echo "anal sfcanl fcst post vrfy metp"
     echo "eobs eupd ecen efcs epos"
     echo "postsnd awips gempak"
@@ -82,6 +82,16 @@ elif [[ "${step}" = "atmanlrun" ]]; then
     export NTHREADS_ATMANL=${nth_atmanlrun:-${nth_max}}
     [[ ${NTHREADS_ATMANL} -gt ${nth_max} ]] && export NTHREADS_ATMANL=${nth_max}
     export APRUN_ATMANL="${launcher} -n ${npe_atmanlrun}"
+
+elif [[ "${step}" = "atmensanlrun" ]]; then
+
+    export APRUNCFP="${launcher} -n \$ncmd ${mpmd_opt}"
+
+    nth_max=$((npe_node_max / npe_node_atmensanlrun))
+
+    export NTHREADS_ATMENSANL=${nth_atmensanlrun:-${nth_max}}
+    [[ ${NTHREADS_ATMENSANL} -gt ${nth_max} ]] && export NTHREADS_ATMENSANL=${nth_max}
+    export APRUN_ATMENSANL="${launcher} -n ${npe_atmensanlrun}"
 
 elif [[ "${step}" = "aeroanlrun" ]]; then
 
